<resources>
    <string name="app_name" translatable="false">BlissDolphin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Give your thoughts a voice</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_writer">Writer</string>
    <string name="menu_alchemy">Alchemy</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_preferences">Preferences</string>

    <string name="settings_title_language">Select Language</string>
    <string name="settings_title_theme">Select Theme</string>
    <string name="theme_lavender">Lavender</string>
    <string name="theme_ocean">Ocean</string>
    <string name="theme_forest">Forest</string>
    <string name="theme_sunset">Sunset</string>

    <string name="language_english" translatable="false">English (EN)</string>
    <string name="language_polish" translatable="false">Polski (PL)</string>

    <string name="fab_content_description">Action button</string>
    <string name="image_view_item_transform_content_description">Item preview</string>
    <string name="item_count_format">x%1$d</string>
    <string name="alchemy_daily_goal">Daily Goal: %1$d symbols</string>
    <string name="discovered_symbols_count">%d symbols discovered</string>
    <string name="page_info">Page %d of %d</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
</resources>